--- a/style.css
+++ b/style.css
@@ -132,11 +132,12 @@ h1 {
     position: relative;
     width: 100%;
     max-width: 800px;
-    margin: 0 auto -2rem;
+    margin: 0 auto;
     aspect-ratio: 2/1;
     display: flex;
     justify-content: center;
     align-items: center;
+    max-height: 350px;
 }
 
 #map-container svg {
